tests/snapshots/yaml_suite_snapshots__yaml_suite_JKF3_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Multiline unidented double quoted block key
  from: "@ingydotnet"
  tags: indent
  fail: true
  yaml: "- - \"bar\nbar\": x\n"
  tree: "+STR\n +DOC\n  +SEQ\n   +SEQ\n"
