tests/snapshots/yaml_suite_snapshots__yaml_suite_JKF3_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- fail: true
  from: "@ingydotnet"
  name: Multiline unidented double quoted block key
  tags: indent
  tree: "+STR\n +DOC\n  +SEQ\n   +SEQ\n"
  yaml: "- - \"bar\nbar\": x\n"
