tests/snapshots/yaml_suite_snapshots__yaml_suite_JR7V_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Question marks in scalars
  from: "@perlpunk"
  tags: flow scalar
  yaml: "- a?string\n- another ? string\n- key: value?\n- [a?string]\n- [another ? string]\n- {key: value? }\n- {key: value?}\n- {key?: value }\n"
  tree: "+STR\n +DOC\n  +SEQ\n   =VAL :a?string\n   =VAL :another ? string\n   +MAP\n    =VAL :key\n    =VAL :value?\n   -MAP\n   +SEQ []\n    =VAL :a?string\n   -SEQ\n   +SEQ []\n    =VAL :another ? string\n   -SEQ\n   +MAP {}\n    =VAL :key\n    =VAL :value?\n   -MAP\n   +MAP {}\n    =VAL :key\n    =VAL :value?\n   -MAP\n   +MAP {}\n    =VAL :key?\n    =VAL :value\n   -MAP\n  -SEQ\n -DOC\n-STR\n"
  json: "[\n  \"a?string\",\n  \"another ? string\",\n  {\n    \"key\": \"value?\"\n  },\n  [\n    \"a?string\"\n  ],\n  [\n    \"another ? string\"\n  ],\n  {\n    \"key\": \"value?\"\n  },\n  {\n    \"key\": \"value?\"\n  },\n  {\n    \"key?\": \"value\"\n  }\n]\n"
  dump: "- a?string\n- another ? string\n- key: value?\n- - a?string\n- - another ? string\n- key: value?\n- key: value?\n- key?: value\n"
