tests/snapshots/yaml_suite_snapshots__yaml_suite_JR7V_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Question marks in scalars
  from: "@perlpunk"
  tags: flow scalar
  yaml: "- a?string\n- another ? string\n- key: value?\n- [a?string]\n- [another ? string]\n- {key: value? }\n- {key: valu…"
  tree: "+STR\n +DOC\n  +SEQ\n   =VAL :a?string\n   =VAL :another ? string\n   +MAP\n    =VAL :key\n    =VAL :value?\n   -MA…"
  json: "[\n  \"a?string\",\n  \"another ? string\",\n  {\n    \"key\": \"value?\"\n  },\n  [\n    \"a?string\"\n  ],\n  [\n    \"another…"
  dump: "- a?string\n- another ? string\n- key: value?\n- - a?string\n- - another ? string\n- key: value?\n- key: value?\n-…"
