tests/snapshots/yaml_suite_snapshots__yaml_suite_JS2J_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- from: "http://www.yaml.org/spec/1.2/spec.html#id2785977"
  json: "{\n  \"First occurrence\": \"Value\",\n  \"Second occurrence\": \"Value\"\n}\n"
  name: Spec Example 6.29. Node Anchors
  tags: spec alias
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :First occurrence\n   =VAL &anchor :Value\n   =VAL :Second occurrence\n   =ALI *anchor\n  -MAP\n -DOC\n-STR\n"
  yaml: "First occurrence: &anchor Value\nSecond occurrence: *anchor\n"
